# woodpacker

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  crossbuild.sh  woodpacker.c
include/: woodpacker.h
src/: align.c  del_data_wrap.c  del_exec_data.c  get_pack_data.c  load_exec.c  new_data_wrap.c  new_exec_data.c  pack_exec.c  print_hex.c  validate_exec.c  woodpacker.c  woodpacker.h  woody.c
src/compress/: compress.c  compress.h  decompress.c  decompress_elf32.c  decompress_elf64.c
src/crypt/: crypt.h  crypt_exec.c  crypt_exec.h  decrypt.asm  encrypt.asm  encrypt.s  encrypt_aes.c  generate_key.c  payload.asm
src/elf64/: elf64_packer.h
src/load/: del_exec_data.c  load_exec.c  load_exec.h  mmap_exec.c  munmap_exec.c  new_exec_data.c  validate_exec.c  validate_exec_elf32.c  validate_exec_elf64.c
src/pack/: allocate_woody.c  del_cave_info.c  del_pack_data.c  get_map_data.c  new_pack_data.c  pack_exec.c  pack_exec.h  pack_share.h  write_woody.c
src/pack/elf32/: assemble_woody_elf32.c  find_cave_elf32.c  pack_elf32.c  pack_elf32.h  payload_elf32.asm
src/pack/elf64/: adjust_tmpl_elf64.c  adjust_tmpl_vars_elf64.c  assemble_woody_elf64.c  find_cave_elf64.c  get_strtab_ptr_elf64.c  get_symtab_shdr_elf64.c  init_tmpl_elf64.c  pack_elf64.c  pack_elf64.h  payload_elf64.asm  write_woody_elf64.c
src/pack/pack_elf64/: pack_elf64.c  pack_elf64.h
templates/: woody_elf64
